adding some blocks

--- a/src/main/resources/assets/wizardstower/lang/en_us.json
+++ b/src/main/resources/assets/wizardstower/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.wizardstower.animusgem": "Animus Gem"
+  "item.wizardstower.animusgem": "Animus Gem",
+
+  "block.wizardstower.towerwood": "Towerwood",
+  "block.wizardstower.magestone": "Magestone"
 }
